--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .Bolinha{
     text-align: center;
-    background-color: #5180E0;
+    background-color: blue;
     font-size: 20px;
     border-radius: 60px;
     height: 60px;
@@ -8,23 +8,22 @@
 }
 
 .Bot{
-
     position: fixed;
     right:4% ;
     bottom: 2%; 
     padding: 10px;
     display: flex;
-    background-color: red;
     align-items: center;
 }
 
 .TextoBolinha{
     left:20px ;
     right:20px ;
-    bottom: 20px; 
     padding: 10px;
-    
-
+    background-color: #DFDFDF;
+    border-radius: 15px;
+    margin-right: 5px
+   
 }
 
 .some{
@@ -35,31 +34,65 @@
     height: 430px;
     width: 400px;
     position: fixed;
-    right:4% ;
-    bottom: 8%; 
-    padding: 10px;
-    background-color: blue;
+    right:6%;
+    bottom: 10%; 
     align-items: center;
+    
 }
 
 .Cabecalho{
-    height: 80px;
+    height: 20%;
     width: 100%;
-    paddinf: 10px;
-    background-color: red;
+    background-color: #3481FF;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .Conversa{
     height: 80%;
     width: 100%; 
-    paddinf: 10px;
-    background-color: green;
+    background-color: #FFF;
 }
 
-.Chat{
-    position: fixed;
-    right:4% ;
-    bottom: 20%; 
+
+.Sair{
+    font-size: 20px;
+    padding: 30px;
+}
+
+.Foto{
+    font-size: 20px;
+    padding: 20px;
+}
+
+.Campo{
+    height: 30px;
+    width: 98%;
+    border-radius: 10px;
+}
+
+.MenEu{
+    background-color: #CBCBCB;
+    height: 60px;
+    width: 250px;
     padding: 10px;
-    align-items: center;
+    border-radius: 20px;
+    margin-left: 20px;
+    margin-top: 20px;
+    text-align: left;
+}
+
+.MenCli{
+    background-color: #3481FF;
+    height: 40px;
+    width: 250px;
+    padding: 10px;
+    border-radius: 20px;
+    margin-right: 20px;
+    margin-left: 100px;
+    margin-top: 20px;
+    text-align: center;
 }
