--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,29 @@
+
+.body{
+    background-color: #CBEBC0;
+}
 .Bolinha{
-    text-align: center;
-    background-color: blue;
-    font-size: 20px;
-    border-radius: 60px;
-    height: 60px;
-    width: 60px;
+    height: 100px;
+    width: 100px;
+    
+
 }
 
 .Bot{
     position: fixed;
-    right:4% ;
-    bottom: 2%; 
+    right:2% ;
+    bottom: 5%;
+    height: 100px;
+    width: 500px; 
     padding: 10px;
     display: flex;
-    align-items: center;
+    flex-flow: column wrap;
+    align-content: flex-end;
 }
 
 .TextoBolinha{
-    left:20px ;
-    right:20px ;
+    height: 50px;
+    width: 80%;
     padding: 10px;
     background-color: #DFDFDF;
     border-radius: 15px;
@@ -37,6 +42,8 @@
     right:6%;
     bottom: 10%; 
     align-items: center;
+    background-color: #FFF;
+    border-radius: 20px;
     
 }
 
@@ -63,10 +70,7 @@
     padding: 30px;
 }
 
-.Foto{
-    font-size: 20px;
-    padding: 20px;
-}
+
 
 .Campo{
     height: 30px;
@@ -95,4 +99,31 @@
     margin-left: 100px;
     margin-top: 20px;
     text-align: center;
+}
+
+.Foto{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.Foto2{
+    max-width: 50%;
+    max-height: 50%;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.FotoCab{
+    height: 200px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+}
+
+.PFoto{
+    font-size: 20px;
+    padding: 5px;
+    margin-top: 20px;
 }
