--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
     background-color: #CBEBC0;
 }
 .Bolinha{
-    height: 100px;
-    width: 100px;
-    
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
 
 }
 
@@ -50,8 +50,8 @@
 .Cabecalho{
     height: 20%;
     width: 100%;
-    background-color: #3481FF;
-    justify-content: space-between;
+    background-color: #FFF;
+    //justify-content: space-between;
     display: flex;
     align-items: center;
     border-top-left-radius: 20px;
@@ -68,6 +68,7 @@
 .Sair{
     font-size: 20px;
     padding: 30px;
+    margin-left: 110px;
 }
 
 
@@ -116,14 +117,18 @@
 }
 
 .FotoCab{
-    height: 200px;
-    width: 200px;
+    height: 60px;
+    width: 60px;
     display: flex;
     align-items: center;
+    border-radius: 50%;
+    padding: 5px;
+    margin-left: 3px;
 }
 
 .PFoto{
     font-size: 20px;
     padding: 5px;
     margin-top: 20px;
+    margin-right: 20px;
 }
