--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,19 @@
 .body{
     background-color: #CBEBC0;
 }
+
 .Bolinha{
-
-    height: 90px;
     width: 90px;
-    border-radius: 50%;
-
+    height: 90px; 
+    border-radius: 50%; 
+    display: inline-block; 
+    position: absolute;
+    z-index: 32767;    
+    bottom: 24px;    
+    right: 18px;    
+    vertical-align: middle;    
+    background-size: cover;    
+    margin-bottom: 10px
 }
 
 .Bot{
@@ -27,8 +34,8 @@
     width: 80%;
     padding: 10px;
     background-color: #DFDFDF;
-    border-radius: 15px;
-    margin-right: 5px
+    border-radius: 20px;
+    margin-right: 110px
    
 }
 
@@ -108,19 +115,6 @@
     text-align: center;
 }
 
-.Foto{
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 50%;
-    padding: 10px;
-}
-
-.Foto2{
-    max-width: 50%;
-    max-height: 50%;
-    border-radius: 50%;
-    padding: 10px;
-}
 
 .FotoCab{
     height: 60px;
